Casi fin de MN/T6 Nada se ropmio del anterior

--- a/MN/Tareas/T6/Tarea6.ipynb
+++ b/MN/Tareas/T6/Tarea6.ipynb
@@ -46,11 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 68,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-06T17:17:27.365200Z",
-     "start_time": "2020-10-06T17:17:26.303368Z"
+     "end_time": "2020-10-06T18:36:15.995106Z",
+     "start_time": "2020-10-06T18:36:15.977978Z"
     },
     "init_cell": true
    },
@@ -79,6 +79,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.linalg import solve_triangular # Para backward y forward substitution\n",
+    "from local.utils import *\n",
+    "\n",
+    "from local.Tareas.T4.Tarea4 import solChol\n",
     "\n",
     "NOTEBOOK = True\n",
     "\n",
@@ -87,10 +90,10 @@
     "\n",
     "    import doctest\n",
     "    from docopt import docopt\n",
-    "    \n",
+    "\n",
     "    doctest.testmod()\n",
     "    args = docopt(usage, version='Tarea6. Benjamin Rivera')\n",
-    "    \n",
+    "\n",
     "\n",
     "    if args['ejercicio1']:\n",
     "        Ejercicio1(args['<d>'], args['<tabla>'], args['<n>'], path=args['--path'])"
@@ -105,81 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-06T17:09:48.455284Z",
-     "start_time": "2020-10-06T17:09:48.434667Z"
-    },
-    "code_folding": []
-   },
-   "outputs": [],
-   "source": [
-    "# De otros archivos\n",
-    "\n",
-    "def show1D(vec,/, max_sz=8, show=True):\n",
-    "    \"\"\" Implementacion para pprint vector 1D.\n",
-    "    \n",
-    "    Funcion para generar string para poder imporimir un\n",
-    "    vector de manera reducida, dando un maximo de elementos \n",
-    "    a imprimir. Lo puede imprimir directamente si se quiere\n",
-    "    \n",
-    "    Input:\n",
-    "        vec := vector de informacion a imprimir.\n",
-    "        [opcionales]\n",
-    "        max_sz := Maximo de elementos a imprimir.\n",
-    "        show := Imprimir vector\n",
-    "        \n",
-    "    _Doctest:\n",
-    "        >>> show1D([1,2,3,4], show=False)\n",
-    "        '1, 2, 3, 4'\n",
-    "        \n",
-    "        >>> show1D([1,2,3,4,5,6,7,8,9], show=False)\n",
-    "        '1, 2, 3, 4, ..., 6, 7, 8, 9'\n",
-    "    \"\"\"\n",
-    "    n=0\n",
-    "    # En caso de que venga de instancia de np.data\n",
-    "    try:\n",
-    "        shape = vec.shape\n",
-    "        if len(shape) < 2:\n",
-    "            raise Exception('Array 1D')\n",
-    "        else:\n",
-    "            if shape[0] == 1:\n",
-    "                get = lambda i: vec[0,i]\n",
-    "                n = shape[1]\n",
-    "            elif shape[1] == 1:\n",
-    "                get = lambda i: vec[i,0]\n",
-    "                n = shape[0]\n",
-    "            else:\n",
-    "                raise Exception('No arreglo 1D')\n",
-    "    \n",
-    "    except AttributeError:\n",
-    "        get = lambda i: vec[i]\n",
-    "        n = len(vec)\n",
-    "    except Exception as e:\n",
-    "        if e == 'No arreglo 1D':\n",
-    "            print(e)\n",
-    "    \n",
-    "    ret = '  '\n",
-    "    if n <= max_sz:\n",
-    "        for i in range(n): ret += str(get(i))+', '\n",
-    "    else:\n",
-    "        for i in range(4): ret += str(get(i))+', '\n",
-    "        ret += '..., '\n",
-    "        for i in range(4): ret += str(get(-(4-i)))+', '\n",
-    "    \n",
-    "    ret = ret[2:-2]\n",
-    "    if show: print(ret)\n",
-    "    return ret        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-10-06T17:09:48.609147Z",
-     "start_time": "2020-10-06T17:09:48.460278Z"
+     "end_time": "2020-10-06T17:40:11.131734Z",
+     "start_time": "2020-10-06T17:40:11.123906Z"
     },
     "code_folding": [
      3
@@ -210,11 +143,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-06T17:09:48.807284Z",
-     "start_time": "2020-10-06T17:09:48.615795Z"
+     "end_time": "2020-10-06T17:40:11.649270Z",
+     "start_time": "2020-10-06T17:40:11.645402Z"
     },
     "code_folding": [
      3
@@ -247,27 +180,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-06T17:09:49.219931Z",
-     "start_time": "2020-10-06T17:09:48.809681Z"
+     "end_time": "2020-10-06T18:24:28.837048Z",
+     "start_time": "2020-10-06T18:24:28.820158Z"
     },
-    "code_folding": []
+    "code_folding": [
+     3
+    ]
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'A' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-5012ae749038>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m \u001b[0mminimosCuadrados\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'A' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Parte 3\n",
     "# Solucion de minimos cuadrados\n",
@@ -294,66 +217,37 @@
     "    Output:\n",
     "        x := si existe sus valors; None en otro caso\n",
     "    \"\"\"\n",
-    "    x = None\n",
-    "    \n",
-    "    return A\n",
+    "    print('\\nIn da function :3\\n')\n",
     "\n",
-    "minimosCuadrados(A, b)"
+    "    x = np.zeros((A.shape[0],1))\n",
+    "        \n",
+    "    At = A.transpose()@A\n",
+    "    yt = A.transpose()*b\n",
+    "    \n",
+    "    return solChol(At, At.shape[0], yt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 70,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-06T17:09:57.967785Z",
-     "start_time": "2020-10-06T17:09:57.871712Z"
+     "end_time": "2020-10-06T18:39:27.520202Z",
+     "start_time": "2020-10-06T18:39:27.492050Z"
     },
     "code_folding": [
      2,
-     18,
-     44,
-     45,
-     72,
-     87,
-     116,
-     118,
-     126
+     28,
+     29,
+     56,
+     71,
+     89,
+     98
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Seguro que quieres usar grado 2 para aproximar?\n",
-      "\n",
-      "In da function :3\n",
-      "\n",
-      "[[12221.22857083 12221.22857083   936.07742583]\n",
-      " [12221.22857083 12221.22857083   936.07742583]\n",
-      " [  936.07742583   936.07742583   100.        ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# PArte 4\n",
-    "\n",
-    "def f_polinomio(coef):\n",
-    "    \"\"\" Funcion que genera una funcion polinomial de una \n",
-    "    variable dados sus coeficientes\n",
-    "    \n",
-    "    _Doctest\n",
-    "        >>> (f_polinomio([1,0,0]))(2)\n",
-    "        4\n",
-    "        \n",
-    "        >>> (f_polinomio([1,0]))(123)\n",
-    "        123\n",
-    "    \"\"\"\n",
-    "    coef = np.ravel(coef)\n",
-    "    grado = len(coef)-1\n",
-    "    \n",
-    "    return lambda x: sum([coef[n]*x**(grado-n) for n in range(grado+1)])\n",
     "\n",
     "def get2Dvec(path,/, dtype=np.float64, info=True):\n",
     "    \"\"\" Funcion para cargar vector 2D.\n",
@@ -423,7 +317,7 @@
     "    fig, ax = plt.subplots()\n",
     "    sns.scatterplot(x, y, ax=ax)\n",
     "    plt.show()\n",
-    "    \n",
+    "\n",
     "def plot_ej1_2(x, y, f, rng):\n",
     "    \"\"\" Funcion 2 para graficar resultados\n",
     "    \n",
@@ -441,10 +335,7 @@
     "    ax.plot(rng, yf, linestyle= \"-\")\n",
     "    plt.show()\n",
     "\n",
-    "\n",
     "def Ejercicio1(d, n_tabla, n,/,path='datos/', dtype=np.float64, plot=True, prnt=True):\n",
-    "    n_tabla='puntos2D_conjunto1.txt'\n",
-    "    \n",
     "    # Cargar datos\n",
     "    tabla, info = get2Dvec(path+n_tabla, \n",
     "                           dtype=dtype)\n",
@@ -455,135 +346,40 @@
     "    \n",
     "    if plot: \n",
     "        plot_ej1_1(x,y)\n",
+    "\n",
     "    try:\n",
     "        print(f\"Seguro que quieres usar grado {n} para aproximar?\")\n",
-    "        #inp = input(\"[S para mantener]: \").lower().strip()\n",
-    "        inp = 's'\n",
+    "        inp = input(\"[S para mantener]: \").lower().strip()\n",
+    "        #inp = 's'\n",
     "        \n",
     "        if not inp.startswith('s'):\n",
-    "            n = np.uint(inp)\n",
-    "            if prnt: print(f'n={n}')\n",
-    "    except:\n",
-    "        if prnt: print(f'Se mantiene n={n}')\n",
-    "    \n",
+    "            n = int(inp)\n",
+    "    finally:\n",
+    "        if prnt: print(f'n={n}')\n",
+    "    \"\"\"\n",
+    "    #----------------opt implementada por numpy ----------------------------\n",
     "    if prnt: print('opt1')\n",
-    "    f = np.polynomial.polynomial.Polynomial.fit(x, y, n, domain = (-1, 1))\n",
+    "    f = f_polinomio(np.polyfit(x, y, n))\n",
     "    if plot: plot_ej1_2(x, y, f, rng)\n",
-    "        \n",
+    "    \n",
+    "    #--------------opt autoimplementada pot yo -----------------------------\n",
     "    if prnt: print('opt2')\n",
+    "    \"\"\"\n",
     "    \n",
     "    sz = len(x)\n",
     "    # Crear matriz a\n",
     "    A = np.ones((sz, n+1), \n",
     "                dtype=dtype)\n",
-    "    \n",
     "    for i in range(n):\n",
-    "        A[:,i] = tabla[0,:]\n",
+    "        A[:,i] = np.power(tabla[0,:], n-i)\n",
     "    # vector y\n",
     "    b = np.matrix(tabla[1,:]).transpose()\n",
     "    \n",
     "    coef = minimosCuadrados(A, b)\n",
-    "    #f = f_polinomio(coef)\n",
+    "    f = f_polinomio(coef)\n",
     "    \n",
-    "    if plot: plot_ej1_2(x, y, f, rng)\n",
-    "        \n",
-    "def minimosCuadrados(A, b,/, dtype=np.float64):\n",
-    "    \"\"\" Funcion que calcula la solucion de minimos cuadrados.\n",
-    "    \n",
-    "    Funcion que calcula la solucion de minimos cuadrado. Para\n",
-    "    esto se basa de funciones ya implementadas para calcular\n",
-    "    A^t@A y A^tb, para luego calcular la solucion del sitema\n",
-    "    A^t@Ax = A^tb con fact de Cholesky.\n",
-    "    \n",
-    "    La funcion devuelve la solucion del sistema x si se encontro\n",
-    "    y None en caso de que no se haya encontrado.\n",
-    "    \n",
-    "    A pesar de que la funcion tambien pide que se pasen las\n",
-    "    dimensiones de las matrices, la forma pythonica no lo \n",
-    "    requiere; por lo que seran obtenidas dentro del metodo.\n",
-    "    \n",
-    "    Input:\n",
-    "        A := apuntador a matriz A\n",
-    "        b := apuntador a vector b\n",
-    "        \n",
-    "    Output:\n",
-    "        x := si existe sus valors; None en otro caso\n",
-    "    \"\"\"\n",
-    "    print('\\nIn da function :3\\n')\n",
-    "\n",
-    "    x = np.zeros((A.shape[0],1))\n",
-    "        \n",
-    "    At = A.transpose()@A\n",
-    "    yt = A.transpose()*b\n",
-    "    print(At)\n",
-    "    \n",
-    "    return A\n",
-    "    \n",
-    "Ejercicio1(50, None, 2, plot=False, prnt=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-10-06T17:09:49.237806Z",
-     "start_time": "2020-10-06T17:09:41.762Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "input('prb: ').strip().lower()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-10-06T17:21:13.715055Z",
-     "start_time": "2020-10-06T17:21:13.660074Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function solChol in module local.Tareas.T4.Tarea4:\n",
-      "\n",
-      "solChol(A, n, b, /, t=2.220446049250313e-16, dtype=<class 'numpy.float64'>)\n",
-      "    Funcion para resolver con Cholesky\n",
-      "    \n",
-      "    Esta funcion recibira una funcion A simetrica y\n",
-      "    positiva. Luego con ella se usara alguna implemen_\n",
-      "    tacion de forwardSubstitution para resolver el\n",
-      "    sistema Ax=b => LL^Tx=b\n",
-      "    \n",
-      "        Input:\n",
-      "            A := Apuntador a matriz A del sistema\n",
-      "            n := tamanio n de matriz A\n",
-      "            b := apuntador a vector b del sistema\n",
-      "            t := tolerancia de similaridad a cero\n",
-      "        \n",
-      "        Output:\n",
-      "            ret := None si algo salio mal, en otro\n",
-      "                caso se regresa el apuntador al \n",
-      "                vector de respuestas\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from local.Tareas.T4.Tarea4 import solChol\n",
-    "help(solChol)"
+    "    if plot: \n",
+    "        plot_ej1_2(x, y, f, rng)\n"
    ]
   },
   {
