No recuerdo cual fue la ultima actualizacion

--- a/MN/Tareas/T6/Tarea6.ipynb
+++ b/MN/Tareas/T6/Tarea6.ipynb
@@ -545,9 +545,9 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "MN-env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "mn-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
