--- a/MN/Tareas/T8/Tarea8.ipynb
+++ b/MN/Tareas/T8/Tarea8.ipynb
@@ -18,10 +18,13 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from numpy import linalg as LA\n",
-    "import seaborn as sns\n",
+    "import numpy.linalg as LA\n",
     "import scipy as sp\n",
+    "import seaborn as sns\n",
+    "\n",
     "from scipy.linalg import solve_triangular # Para backward y forward substitution\n",
+    "from scipy.linalg import svdvals\n",
+    "\n",
     "\n",
     "NOTEBOOK = True"
    ]
@@ -57,22 +60,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.538  0.771 ]\n",
-      " [0.4976 0.785 ]]\n",
+      "[[0.00699 0.557   0.211  ]\n",
+      " [0.8823  0.5234  0.873  ]\n",
+      " [0.1685  0.4473  0.3882 ]]\n",
       "\n",
-      "[[0.9023 0.3386]\n",
-      " [0.744  0.1248]]\n",
+      "[[0.3032 0.7275 0.7104]\n",
+      " [0.956  0.709  0.4727]\n",
+      " [0.1611 0.85   0.8247]]\n",
       "\n",
-      "[0.70038923 0.98527191]\n",
+      "[0.9999067265913241, 0.3135876751977431, 0.585319352113929]\n",
       "\n",
-      "------------------------\n",
-      "[[0.771  0.538 ]\n",
-      " [0.785  0.4976]]\n",
+      "------------------------------------\n",
+      "[[0.00699 0.211   0.557  ]\n",
+      " [0.8823  0.873   0.5234 ]\n",
+      " [0.1685  0.3882  0.4473 ]]\n",
       "\n",
-      "[[0.3386 0.9023]\n",
-      " [0.1248 0.744 ]]\n",
+      "[[0.3032 0.7104 0.7275]\n",
+      " [0.956  0.4727 0.709 ]\n",
+      " [0.1611 0.8247 0.85  ]]\n",
       "\n",
-      "[0.9852719110897654, 0.7003892272142301]\n",
+      "[0.9999067265913241, 0.585319352113929, 0.3135876751977431]\n",
       "\n"
      ]
     }
@@ -80,7 +87,7 @@
    "source": [
     "def reordenar_matriz(mat, orden):\n",
     "    if type(mat) == np.matrix:\n",
-    "        return np.concatenate([mat[:,i] for i in orden], \n",
+    "        return np.concatenate([mat[:, i] for i in orden],\n",
     "                              axis=1)\n",
     "    else:\n",
     "        return [mat[i] for i in orden]\n",
@@ -98,7 +105,7 @@
     "    # Reordenamos los recibidos O(3n)\n",
     "    M1 = reordenar_matriz(M1, orden)\n",
     "    M2 = reordenar_matriz(M2, orden)\n",
-    "    v  = reordenar_matriz(v, orden) \n",
+    "    v = reordenar_matriz(v, orden)\n",
     "    # --------------------------\n",
     "    # Regresamos los reordenados\n",
     "    return M1, M2, v\n",
@@ -109,7 +116,7 @@
     "    n = 3\n",
     "    U = np.matrix(np.random.rand(n, n), dtype=np.float16)\n",
     "    V = np.matrix(np.random.rand(n, n), dtype=np.float16)\n",
-    "    s = np.random.rand(1, n).flatten()\n",
+    "    s = list(np.random.rand(1, n).flatten())\n",
     "    print(U, end='\\n\\n')\n",
     "    print(V, end='\\n\\n')\n",
     "    print(s, end='\\n\\n')\n",
@@ -118,7 +125,7 @@
     "    U, V, s = ordenar(U, V, s)\n",
     "    print(U, end='\\n\\n')\n",
     "    print(V, end='\\n\\n')\n",
-    "    print(s, end='\\n\\n')"
+    "    print(s, end='\\n\\n')\n"
    ]
   },
   {
@@ -135,7 +142,6 @@
    },
    "outputs": [],
    "source": [
-    "# Algoritmo 1\n",
     "def Algoritmo1(A: np.matrix, m: int, n: int, T=None, N=100, dtype=np.float64):\n",
     "    \"\"\" Descomopsocion en valores singulares. \n",
     "    \n",
@@ -144,7 +150,8 @@
     "    \"\"\"\n",
     "    # En caso de no pasar tolerancia lo ponemos al epsilon del tipo de dato\n",
     "    if T is None:\n",
-    "        T = (np.finfo(dtype).eps)**(1/2)\n",
+    "        T = np.finfo(dtype).eps ** (1 / 2)\n",
+    "\n",
     "    if not isinstance(A, np.matrix):\n",
     "        try:\n",
     "            A = np.matrix(A)\n",
@@ -162,53 +169,59 @@
     "        F = 0\n",
     "        for i in range(n-1):\n",
     "            for j in range(i+1, n):\n",
-    "                alpha = A[:, i].transpose()*A[:, i]\n",
-    "                gamma = A[:, j].transpose()*A[:, j]\n",
-    "                beta  = A[:, i].transpose()*A[:, j]\n",
-    "                \n",
+    "                alpha = dtype(A[:, i].transpose()*A[:, i])\n",
+    "                gamma = dtype(A[:, j].transpose()*A[:, j])\n",
+    "                beta  = dtype(A[:, i].transpose()*A[:, j])\n",
+    "\n",
     "                if alpha*gamma > np.finfo(dtype).eps and abs(beta) > T*alpha*gamma:\n",
     "                    F = 1\n",
     "                    if beta != 0:\n",
     "                        nu = (gamma - alpha)/(2*beta)\n",
     "                        t = 1/(abs(nu) + np.sqrt(1 + nu**2))\n",
     "                        if nu < 0:\n",
-    "                            t *= -1\n",
+    "                            t = -t\n",
     "                        c = 1/np.sqrt(1 + t**2)\n",
     "                        s = t*c\n",
     "                    else:\n",
-    "                        c = 1; s = 0; t = 0\n",
+    "                        c = 1\n",
+    "                        s = 0\n",
     "                    \n",
     "                    # Modificacion de A\n",
     "                    a = A[:, i]\n",
     "                    b = A[:, j]\n",
     "                    \n",
-    "                    A[:, i] = a*c - b*s\n",
-    "                    A[:, j] = a*s + b*c\n",
-    "                    \n",
+    "                    A[:, i] = c*a - s*b\n",
+    "                    A[:, j] = s*a + c*b\n",
+    "\n",
     "                    # Modificacion de V\n",
     "                    a = V[:, i]\n",
     "                    b = V[:, j]\n",
     "                    \n",
-    "                    V[:, i] = a*c - b*s\n",
-    "                    V[:, j] = a*s + b*c\n",
+    "                    V[:, i] = c*a - s*b\n",
+    "                    V[:, j] = s*a + c*b\n",
     "    \n",
     "    s = []\n",
     "    for j in range(n):\n",
-    "        s.append( LA.norm(A[:, j], 2) )\n",
-    "        \n",
+    "        s.append(LA.norm(A[:, j].flatten()\n",
+    "                         , 2))\n",
+    "\n",
     "    A, V, s = ordenar(A, V, s)\n",
     "    \n",
-    "    U = np.identity(n)\n",
+    "    U = np.matrix(np.zeros((m, n)),\n",
+    "                  dtype=dtype)\n",
     "    for j in range(n):\n",
-    "        U[:, j] = np.reshape(A[:, j]/s[j], \n",
-    "                             (5))\n",
+    "        U[:, j] = A[:, j]/s[j]\n",
     "\n",
     "    return U, V, s\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Funcion de solucion\n",
     "\n",
@@ -225,13 +238,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "def aproximacion_solucion(U: np.matrix, V: np.matrix, s: list, \n",
     "                          b: np.matrix, n: int, k: int):\n",
-    "    return sum([ (U[:,i].transpose()*b)/s[i]*V[:, i] \n",
+    "    return sum([ ((b*U[:,i].transpose())\n",
+    "                  /s[i])*V[:, i] \n",
     "               for i in range(k)])"
    ]
   },
@@ -258,7 +272,15 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def load_matrix(file_name: str, \n",
@@ -282,10 +304,18 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
-    "def proceso( file_name: str, path = \"datos/\", ext=\".npy\"):\n",
+    "def proceso( file_name: str, path = \"datos/\", ext=\".npy\", show=True):\n",
     "    lon = 100\n",
     "    dtype = np.float64\n",
     "    \n",
@@ -308,16 +338,17 @@
     "    # Condicion de matrix\n",
     "    k2 = s[1]/s[-1]\n",
     "    \n",
-    "    print('-'*lon)\n",
-    "    print(f\"Dimensiones\\n\\t m={szA[0]}, n={szA[1]}\")\n",
-    "    print(f\"Errores ortogonaldad\")\n",
-    "    print(f\"\\t U -> {errU}\")\n",
-    "    print(f\"\\t V -> {errV}\")\n",
-    "    print(f\"Error factorizacion\")\n",
-    "    print(f\"\\t s -> {s}\")\n",
-    "    print(f\"\\t S -> {errS}\")\n",
-    "    print(f\"Condicion de matriz\\n\\t {k2}\")\n",
-    "    print('-'*lon)\n",
+    "    if show:\n",
+    "        print('-'*lon)\n",
+    "        print(f\"Dimensiones\\n\\t m={szA[0]}, n={szA[1]}\")\n",
+    "        print(f\"Errores ortogonaldad\")\n",
+    "        print(f\"\\t U -> {errU}\")\n",
+    "        print(f\"\\t V -> {errV}\")\n",
+    "        print(f\"Error factorizacion\")\n",
+    "        print(f\"\\t s -> {s}\")\n",
+    "        print(f\"\\t S -> {errS}\")\n",
+    "        print(f\"Condicion de matriz\\n\\t {k2}\")\n",
+    "        print('-'*lon)\n",
     "    \n",
     "    return U, V, s\n"
    ]
@@ -335,77 +366,124 @@
       "Dimensiones\n",
       "\t m=5, n=5\n",
       "Errores ortogonaldad\n",
-      "\t U -> 2.159797139132583\n",
+      "\t U -> 2.122411848634482e-08\n",
       "\t V -> 1.2914954894440789\n",
       "Error factorizacion\n",
       "\t s -> [5.668182669132584, 5.539783461443808, 3.580430538421286, 0.9564239531731384, 0.45613123053785987]\n",
-      "\t S -> 8.639275173885142\n",
+      "\t S -> 6.20438087415781\n",
       "Condicion de matriz\n",
       "\t 12.14515273359252\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "\n",
-      "[[ 0.10398117  0.31954811 -0.25864805  0.87770245  0.22319612]\n",
-      " [ 0.22477076  0.0194396  -0.88716441 -0.20741222 -0.34499231]\n",
-      " [-0.8542392   0.44376759 -0.20876335 -0.14546838  0.09274987]\n",
-      " [-0.32990332 -0.80044237 -0.28505351  0.14900366  0.38340348]\n",
-      " [-0.31639408 -0.24469052  0.14561203  0.378491   -0.82192642]]\n",
-      "[[ 0.2051436  -0.33894322 -0.20452588  0.609412    0.2277852 ]\n",
-      " [ 0.10715603 -0.15408889  0.4647943  -0.35385843  0.33778523]\n",
-      " [-0.01099174  0.3471795  -0.19830619  0.2933302   0.26409681]\n",
-      " [ 0.73371923  0.29410531  0.16241412  0.05177398 -0.10460559]\n",
-      " [-0.19292378  0.12785815  0.21605645  0.59658682 -0.00472268]]\n",
-      "[5.668182669132584, 5.539783461443808, 3.580430538421286, 0.9564239531731384, 0.45613123053785987]\n"
+      "[[ 0.24507182 -0.90270864  1.0648785   0.83548115  0.41287544]\n",
+      " [ 0.71778638 -1.33941771  0.55354223  0.4567546  -1.03591622]\n",
+      " [-1.74882695 -1.18155014  1.0253082  -2.96266235  1.00376056]\n",
+      " [ 1.45478487  0.01716455 -1.22855353 -2.85284197 -0.34251647]\n",
+      " [ 0.12012564  0.00428951 -0.54711507 -1.57187169  0.50304521]]\n",
+      "[4.62546674 3.18677891 2.15964637 0.85253219 0.20911506]\n"
      ]
     }
    ],
    "source": [
-    "if True:\n",
-    "    _ = proceso('matA5')\n",
-    "    \n",
-    "    print()\n",
-    "    print(_[0])\n",
-    "    print(_[1])\n",
-    "    print(_[2])"
+    "if NOTEBOOK:\n",
+    "    U, V, s = proceso('matA5')\n",
+    "    S = np.diag(s)\n",
+    "    A = U*S*V.transpose()\n",
+    "    print(A)\n",
+    "    print(svdvals(A))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aqui note que no esta funcionando mi Algoritmo 1, creo que el problema esta en el calculo de la norma. Cuando este resultado es comparado contra las funciones implementadas en nmumpy, los valores difieren por mucho."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pruebas\n",
+    "\n",
+    "Genere el vector $x$ que tiene sus entradas iguales a $1$ y calcule el vector $b = Ax$.\n",
+    "\n",
+    "Use la función del inciso 2 para calcular la solución $x_1$ del sistema de ecuaciones\n",
+    "usando $k = n$. Imprima las primeras y últimas entradas del vector $x_1$ y reporte el\n",
+    "error $||x − x_1||$ y $||Ax_1 − b||$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "[[-0.26838471 -0.27706406  0.05167968 -0.62186223  0.67957468]\n",
-      " [ 0.04712463 -0.69107825  0.59874707 -0.09076397 -0.39173201]\n",
-      " [-0.69562312  0.42522753  0.56039866  0.14533697 -0.01097891]\n",
-      " [ 0.64516575  0.2878811   0.56644176  0.09281572  0.41402247]\n",
-      " [ 0.16005797  0.42655877  0.06267565 -0.75849303 -0.4617241 ]]\n",
-      "[10.0453801   7.58073142  6.06264573  1.05694463  0.8686526 ]\n",
-      "[[ 0.64592571  0.1089041  -0.71639276 -0.02889685 -0.23846647]\n",
-      " [-0.23331282  0.25227594 -0.3553973  -0.60494665  0.62422295]\n",
-      " [ 0.10007065 -0.45205192  0.18905183 -0.76223517 -0.41096457]\n",
-      " [-0.25781745  0.7743371   0.07353165 -0.18175952 -0.5435888 ]\n",
-      " [ 0.67220616  0.34720003  0.56508997 -0.13843967  0.29849421]]\n",
-      "[10.0453801   7.58073142  6.06264573  1.05694463  0.8686526 ]\n"
+      "----------------------------------------------------------------------------------------------------\n",
+      "Dimensiones\n",
+      "\t m=5, n=5\n",
+      "Errores ortogonaldad\n",
+      "\t U -> 2.122411848634482e-08\n",
+      "\t V -> 1.2914954894440789\n",
+      "Error factorizacion\n",
+      "\t s -> [5.668182669132584, 5.539783461443808, 3.580430538421286, 0.9564239531731384, 0.45613123053785987]\n",
+      "\t S -> 6.20438087415781\n",
+      "Condicion de matriz\n",
+      "\t 12.14515273359252\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "[[ 1.9834636 ]\n",
+      " [-3.8776106 ]\n",
+      " [-3.999597  ]\n",
+      " [-6.15011408]\n",
+      " [-2.49258567]]\n",
+      "[[ 1.01183074]\n",
+      " [-1.97809812]\n",
+      " [-2.04032744]\n",
+      " [-3.13737771]\n",
+      " [-1.27155084]]\n",
+      "6.355362840222379\n",
+      "40.38798399875771\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'list' object cannot be interpreted as an integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-44-15962d939156>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m     ks = ([k for k in range(len(s)-1)\n\u001b[1;32m     19\u001b[0m           if s[k] > eps**(2/3) and s[k+1] <= eps**(2/3)])\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0msol2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maproximacion_solucion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mU\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mV\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msol2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mLA\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0msol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-35-098f5df2ac65>\u001b[0m in \u001b[0;36maproximacion_solucion\u001b[0;34m(U, V, s, b, n, k)\u001b[0m\n\u001b[1;32m      3\u001b[0m     return sum([ ((b*U[:,i].transpose())\n\u001b[1;32m      4\u001b[0m                   /s[i])*V[:, i] \n\u001b[0;32m----> 5\u001b[0;31m                for i in range(k)])\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'list' object cannot be interpreted as an integer"
      ]
     }
    ],
    "source": [
-    "from scipy.linalg import svdvals\n",
-    "\n",
-    "if True:\n",
-    "    A = load_matrix('matA5', dtype=np.float64)\n",
-    "    _ = np.linalg.svd(A)\n",
+    "if NOTEBOOK:\n",
+    "    n = 5\n",
+    "    file_name = 'matA' + str(n)\n",
     "    \n",
-    "    print()\n",
-    "    print(_[0])\n",
-    "    print(_[1])\n",
-    "    print(_[2])\n",
+    "    A = load_matrix(file_name)\n",
+    "    U, V, s = proceso(file_name)\n",
     "    \n",
-    "    print(svdvals(A))"
+    "    x = np.matrix([1 for n in range(n)]).transpose()\n",
+    "    b = A*x\n",
+    "    \n",
+    "    print(b)\n",
+    "    sol = aproximacion_solucion(U, V, s, b, n, n)\n",
+    "    print(sol)\n",
+    "    print(LA.norm(x - sol))\n",
+    "    print(LA.norm(A*sol - b))\n",
+    "    \n",
+    "    eps = np.finfo(float).eps\n",
+    "    ks = ([k for k in range(len(s)-1)\n",
+    "          if s[k] > eps**(2/3) and s[k+1] <= eps**(2/3)])\n",
+    "    sol2 = aproximacion_solucion(U, V, s, b, n, ks)\n",
+    "    print(sol2)\n",
+    "    print(LA.norm(x - sol))\n",
+    "    print(LA.norm(A*sol - b))"
    ]
   },
   {
