--- a/MN/Tareas/T7/Tarea7.ipynb
+++ b/MN/Tareas/T7/Tarea7.ipynb
@@ -90,9 +90,9 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "name": "pycharm-27de4704",
+   "display_name": "PyCharm (MN)",
    "language": "python",
-   "display_name": "PyCharm (MN)"
+   "name": "pycharm-27de4704"
   },
   "language_info": {
    "codemirror_mode": {
@@ -104,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
